add Page-Not-Found component

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,8 @@
-<p>page-not-found works!</p>
+<div class="host404">
+    <div class="spacer"></div>
+    <div [ngClass]="n404Class">404</div>
+    <div [ngClass]="oopsClass">Oops! Page not found</div>
+    <div [ngClass]="msgClass">Sorry but the page you are looking for does not exist,
+        have been removed, name changed or is temporarily unavailable.</div>
+    <div [ngClass]="backClass"><a href="javascript:history.go(-1)">Go Back</a></div>
+</div>
