--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -2,7 +2,10 @@
     <div class="spacer"></div>
     <div [ngClass]="n404Class">404</div>
     <div [ngClass]="oopsClass">Oops! Page not found</div>
+    <div class="line-break"></div>
     <div [ngClass]="msgClass">Sorry but the page you are looking for does not exist,
         have been removed, name changed or is temporarily unavailable.</div>
+    <div class="line-break"></div>
     <div [ngClass]="backClass"><a href="javascript:history.go(-1)">Go Back</a></div>
+    <div class="line-break"></div>
 </div>
