--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -1,3 +1,5 @@
+@import '../../styles.sass'
+
 .title
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
     font-size: 24px
@@ -5,6 +7,14 @@
     box-sizing: border-box
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
+    &:visited
+    text-decoration: none
+    align-items: center
+    display: flex
+
+.menu
+    margin: 0 16px
+    @include dark-link
 
 .spacer
     flex: 1
@@ -18,7 +28,7 @@
     color: white
     font-weight: 600
 
-.toolbar img
+.toolbar a img
     margin: 0 16px
 
 .toolbar #twitter-logo
@@ -31,3 +41,11 @@
 
 .toolbar #twitter-logo:hover, .toolbar #youtube-logo:hover
     opacity: 0.8
+
+mat-toolbar
+    border-radius: 3px
+
+@media(max-width: 959px)
+    mat-toolbar
+        border-radius: 0px
+    
