--- a/src/styles.sass
+++ b/src/styles.sass
@@ -10,5 +10,24 @@
     &:hover
         color: #7479be
 
+@mixin dark-link()
+    color: #efefef
+    text-decoration: none
+    &:visited
+    &:hover
+        color: #bcbcbc
+
 @mixin content-host()
     width: 80%
+
+/* for sidenav to take a whole page */
+html, body
+    margin: 0
+    height: 100%
+
+div.page-title
+    font-size: 40px
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+    color: #999
+    line-height: 48px
+    margin: 22px 5px
