--- a/src/app/page-not-found/page-not-found.component.sass
+++ b/src/app/page-not-found/page-not-found.component.sass
@@ -16,6 +16,7 @@ $textHeight: 20px
     max-width: 460px
     flex-direction: column
     align-items: flex-start
+    color: #000
 
     .spacer
         @include spacer(1)
