--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
-    <!--this is a place for us to add side-nav code-->
+    <app-side-nav (sidenavClose)="sidenav.close()"></app-side-nav>
   </mat-sidenav>
   <mat-sidenav-content>
     <!--in here all the content must reside. We will add a navigation header as well-->
